--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "16.3.1",
-    "react-native": "^0.55.4"
+    "react": "16.4.1",
+    "react-native": "0.56.0",
+    "reactNativeIntegrate": "git+https://github.com/paulafejaum/reactnativeintegrate.git"
   }
 }
