Using TDC API to use as example

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.facebook.react:react-native:+'
     implementation project(':reactNativeIntegrate')
-    // debugImplementation project(':reactNativeIntegrate')
-    // innerTestImplementation project(':reactNativeIntegrate')
-    // releaseImplementation project(':reactNativeIntegrate')
+    api 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    api 'com.squareup.retrofit2:retrofit:2.1.0'
+    api 'com.google.code.gson:gson:2.6.1'
+    api 'com.squareup.retrofit2:converter-gson:2.0.2'
 }
