--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,8 +26,12 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity
-            android:name=".InnerActivity"
-            android:label="@string/title_activity_inner"
+            android:name=".EventsFragment"
+            android:label="@string/title_activity_events"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".TalksActivity"
+            android:label="@string/title_activity_talks"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
